# Studienarbeit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Schnittstelle_Auto.py  Studienarbeit.docx  main.cpp  test.cpp
Latex/: Studienarbeit.aux  Studienarbeit.bbl  Studienarbeit.blg  Studienarbeit.fdb_latexmk  Studienarbeit.fls  Studienarbeit.lof  Studienarbeit.lol  Studienarbeit.run.xml  Studienarbeit.tex  Studienarbeit.toc
Latex/chapters/: 1_einleitung.tex  2_problem.tex  2_ueberblick.tex  3_ueberblick.tex  4_simulation.tex  4_slam.tex  4_systemvoraussetzungen.tex  5_implementierung.tex  5_simulation.tex  5_slam.tex  6_fazit.tex  6_implementierung.tex  6_simulation.tex  7_implementierung.tex  7_test.tex  8_fazit.tex  icp.tex  systemvoraussetzungen.tex  test.tex
Latex/literatur/: literatur.bib
Latex/pages/: 10_literaturverzeichnis.tex  1_titel.tex  2_sperrvermerk.tex  3_erklaerung.tex  4_genderErklaerung.tex  6_abkuerzungsverzeichnis.tex  8_listingsverzeichnis.tex  9_attachments.tex
code_e-techniker/: Lidar_data.py  car_behavior.py  contoller.py  data_setup.py  input_setup.py  main.py  output_setup.py  sensor_data.py  servo_controller.py
include/: a1lidar.h
src/: a1lidar.cpp
src/core/: CMakeLists.txt  coreInclude.cmake
src/core/include/: evasionAStar.h  evasionAdvancedAStar.h  evasionBasicAStar.h  evasionControl.h  evasionThetaStar.h  icpHandler.h  icpHandler.txt  icpSettings.h  lidar.h  lidarSensor.h  occupancyGrid.h  particle.h  pclHandler.h  selfdrivingVehicle.h  settings.h  slam.h  slamHandler.h  test.h  vehicleActuator.h  vehicleControl.h
src/core/lib/icp/: icp.h
src/core/src/: evasionAStar.cpp  evasionAdvancedAStar.cpp  evasionBasicAStar.cpp  evasionControl.cpp  evasionThetaStar.cpp  icpHandler.cpp  occupancyGrid.cpp  particle.cpp  pclHandler.cpp  selfdrivingVehicle.cpp  slamHandler.cpp
src/icp-test/: dummy_input_icp_test.cpp  dummy_input_icp_test.h  icp_handler.cpp  icp_handler.h  load_vectors.cpp
src/lidar/: CMakeLists.txt  main.cpp
src/lidar/include/: a1lidar.h  a1lidarSensor.h  simulationManager.h  vehicle.h
src/lidar/src/: a1lidar.cpp  a1lidarSensor.cpp  simulationManager.cpp  vehicle.cpp
src/simulation/: CMakeLists.txt  main.cpp
src/simulation/include/: controlWindow.h  intersection.h  lidarSensorSim.h  lidarSim.h  obstacle.h  simulationManager.h  simulationSettings.h  vehicle.h  vehicleActuatorSim.h  vehicleControlSim.h  visualizeWindow.h
src/simulation/src/: controlWindow.cpp  intersection.cpp  lidarSensorSim.cpp  lidarSim.cpp  obstacle.cpp  simulationManager.cpp  test.cpp  vehicle.cpp  vehicleActuatorSim.cpp  vehicleControlSim.cpp  visualizeWindow.cpp
src/slam/: CMakeLists.txt  log_tab.csv  main.cpp  slamImport.cmake
src/slam/data/: coordiantes.csv  log_1.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  scan0001.csv  scan0002.csv  scan0003.csv  scan0004.csv  scan0005.csv  scan0006.csv
src/slam/data_old/: log_1.txt  log_5.txt  log_6.txt  log_7.txt
src/slam/include/: icp_handler.h  load_vectors.h  occupancy_grid.h  particle.h
src/slam/lib/icp/: icp.cpp  icp.h
src/slam/scans/: scan0001.csv  scan0002.csv  scan0003.csv  scan0004.csv  scan0005.csv  scan0006.csv
src/slam/src/: icp_handler.cpp  load_vectors.cpp  occupancyGrid.cpp  occupancy_grid.cpp  particle.cpp
